<resources>
    <string name="app_name">Rolodex</string>
    <string name="action_settings">Settings</string>
    <string name="main_search_title">Search</string>
    <string name="main_add_title">Add</string>
    <string name="main_delete_title">Delete Contacts</string>
    <string name="edit_contact_name_hint">Full name</string>
    <string name="edit_contact_email">Email Address</string>
    <string name="edit_contact_phone">Phone Number</string>
    <string name="save_contact_button">Save</string>
    <string name="search_hint">Search contacts</string>
    <string name="add_contact_activity_title">Add Contact</string>
    <string name="edit_contact_activity_title">Edit Contact</string>
    <string name="search_contacts_activity_title">Search Contacts</string>
    <string name="contact_details_activity_title">Contact Details</string>
    <string name="contact_details_name_title">Name:</string>
    <string name="contact_details_phone_title">Phone:</string>
    <string name="contact_details_email_title">Email:</string>
    <string name="main_menu_button_search_title">Search</string>
    <string name="contact_detail_menu_edit_button_title">Edit</string>
    <string name="contact_detail_menu_delete_button_title">Delete</string>
    <string name="edit_menu_done_button_title">Done</string>
</resources>
