<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/contact_details_buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contact_details_name_title"
            android:textSize="20dp"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/contact_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contact_details_phone_title"
            android:textSize="20dp"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/contact_details_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingRight="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contact_details_email_title"
            android:textSize="20dp"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/contact_details_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>